stop-gap css for maps in dark mode

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -67,3 +67,5 @@
 .vp-doc sub {
   line-height: 1;
 }
+
+:root.dark .dark-invert { filter: invert(0.883); }
